--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -7,7 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Simple jS Action
+        id: greet
         uses: actions/hello-world-javascript-action@v1.1
         with:
           who-to-greet: 'Rasmus'
+      - name: Log greeting rasmus
+        run: echo "${{ steps.greet.outputs.time }}"
 
