--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,6 +10,12 @@ jobs:
         run: |
           pwd
           ls -a
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: List Files After
+        run: |
+          pwd
+          ls -a
       - name: Simple jS Action
         id: greet
         uses: actions/hello-world-javascript-action@v1.1
